tests/snapshots/assets__check_file@unit-code-dict-flavor.typ-80.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/code/dict-flavor.typ
---
#{
  (
    key1: "123",
    key2: "456",
  )
}
