tests/snapshots/assets__check_file@unit-code-dict-special.typ-0.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/code/dict-special.typ
---
#{
  (:)
}

#{
  (
    a: 1,
    b: 2,
  )
}

#{
  let a = (
    a: 1,
  )
  let b = (
    b: 2,
  )
  (:
    ..a,
    ..b,
  )
}

#{
  (
    a: 1,
    b: 2,
  )
  (
    "123": 1,
    "456": 2,
  )
}
