tests/snapshots/assets__check_file@unit-code-dict-special.typ-120.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/code/dict-special.typ
snapshot_kind: text
---
#{
  (:)
}

#{
  (a: 1, b: 2)
}

#{
  let a = (a: 1)
  let b = (b: 2)
  (:..a, ..b)
}

#{
  (a: 1, b: 2)
  ("123": 1, "456": 2)
}
