tests/snapshots/assets__check_file@unit-code-dot-chain.typ-120.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/code/dot-chain.typ
---
#{
  let a = (1, (2, (3, (4,))))
  a.at(1, default: 0).at(1, default: 0).at(1, default: 0).at(4, default: 0)
}
