tests/snapshots/assets__check_file@unit-code-equation-dot-chain.typ-0.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/code/equation-dot-chain.typ
---
#let a = $a^b$.body.has("t")
#a
