tests/snapshots/assets__check_file@unit-code-extra-paren.typ-80.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/code/extra-paren.typ
---
#{
  let a = ((1 + 2))
  a
}

#{
  let x = (1, 2, 3.4)
  let ((a, b, ..)) = x
  a + b
}
